# PlasX

./: .gitignore  .gitmodules  dox_config  equilibrium_run.py  griffin_no_switch.cpp  main.cpp  makefile  mosquito_run.py  params_example.json  plasx-pvibm-equilibrium.cpp
cpp/include/PlasX/: model_simulation_fn.hpp  parse_json.hpp  types.hpp  udl.hpp
cpp/src/PlasX/: random.cpp
include/PlasX/: individual.hpp  model_simulation.hpp  model_simulation_fn.hpp  one_step_model_fn.hpp  population_update.hpp  random.hpp  simulation.hpp  types.hpp  udl.hpp
pyPlasX/test/: TEST_mosquito.py  TEST_mosquito_module.py
pysrc/PlasX/: pyPlasX.cpp
pytest/: TEST_mosquito_run.py
python/: pyproject.toml  run_tests.sh  setup.py
python/pyPlasX/: __init__.py  pyPlasX.cpp
python/pyPlasX/Mosquito/: mosquito_wrapper.cpp
python/pyPlasX/mosquito/: __init__.py  _mosquito_wrapper.cpp
python/pyPlasX/pvibm/: __init__.py  _equilibrium_wrapper.cpp  _model_wrapper.cpp  _parameters_wrapper.cpp  _population_wrapper.cpp  _status_wrapper.cpp  equilibrium.py  equilibrium_wrapper.cpp  model_wrapper.cpp  parameters_wrapper.cpp  population_wrapper.cpp  py_pvibm_population.cpp  status_wrapper.cpp
python/pyPlasX/test/: TEST_equilibrium_run.py  TEST_mosquito.py  TEST_mosquito_module.py  TEST_mosquito_run.py  TEST_population.py  TEST_status.py
python/src/PlasX/: pyPlasX.cpp
python/test/: TEST_equilibrium_run.py  TEST_mosquito.py  TEST_mosquito_module.py  TEST_mosquito_run.py  TEST_population.py  TEST_status.py
src/PlasX/: random.cpp
test/Plasx/: TEST_parse_json.cpp
(+69 files in other folders)
